--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
         </div>
         
         <div class="nav-links">
-            <a href="#" >Home</a>
-            <a href="#" >Portfolio</a>
-            <a href="#">Contact</a>
-            <a href="#" >Cv</a>
-            <a href="#" >Site Report</a>
+            <a href="index.html" >Home</a>
+            <a href="portfolio.html" >Portfolio</a>
+            <a href="contact.html">Contact</a>
+            <a href="cv.html" >Cv</a>
           </div>
     </div>
     <div class="container2">
@@ -78,7 +77,6 @@
                         <a href="#"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                     </div>
-                    
                 </div>
             </div>
         </div>
