site report complete

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,6 +32,8 @@
             <a href="portfolio.html" >Portfolio</a>
             <a href="contact.html">Contact</a>
             <a href="cv.html" >Cv</a>
+            <a href="sitereport.html" >Site Report</a><span></span>
+
           </div>
     </div>
 
