--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTFOLIO</title>
-    <LINK rel="STYLESHEET"href="./css/style.css">
+    <LINK rel="STYLESHEET" href="./css/style.css">
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|">
 
 </head>
 <body>
@@ -71,7 +71,7 @@
                         <li><a href="#">pratikkatwal1@gmail.com</a></li>
                     </ul>
         
-                </ul>
+                
                 </div>
                 <div class="footer-col">
                     <h4>follow me</h4>
