--- a/sitereport.html
+++ b/sitereport.html
@@ -38,51 +38,42 @@
     </div>
 
     <div class="container">
-        <h1>1.Site Report 1</h1>
-        <p>hello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello world
-            hello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello world
-            hello worldhello worldhello worldhello worldhello world
-            hello worldhello worldhello worldhello worldhello world
-            hello worldhello world
+        <h1>1.Introduction</h1>
+        <p>This project have helped me to make a simple website using html and css only In tis pandamic I managed to learn basic css and html work.
+
         </p>
         
 
-        <h1>1.Site Report 1</h1>
-        <p>hello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello world
-            hello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello world
-            hello worldhello worldhello worldhello worldhello world
-            hello worldhello worldhello worldhello worldhello world
-            hello worldhello world
-        </p>
 
-        <h1>1.Site Report 1</h1>
-        <p>hello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello world
-            hello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello world
-            hello worldhello worldhello worldhello worldhello world
-            hello worldhello worldhello worldhello worldhello world
-            hello worldhello world
+        <h1>2.Design</h1>
+        <p>Design part wast the most difficult part for me because I had never thought that I was capable of making this design of my own .
         </p>
 
 
-        <h1>1.Site Report 1</h1>
-        <p>hello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello world
-            hello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello world
-            hello worldhello worldhello worldhello worldhello world
-            hello worldhello worldhello worldhello worldhello world
-            hello worldhello world
+        <h1>3.Analysis </h1>
+        <p>while making portfolio I there where many errors But I took help from my friends and my tutor making this portfolio was not a cup of tea for me .
+        </p>
+
+        <h1>4.Learning Experience</h1>
+        <p>Before joining This institute I had zero knowledge about html and css or any kind of IT related things I enjoyed my self while making this portfolio . 
         </p>
 
 
-        <h1>1.Site Report 1</h1>
-        <p>hello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello world
-            hello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello worldhello world
-            hello worldhello worldhello worldhello worldhello world
-            hello worldhello worldhello worldhello worldhello world
-            hello worldhello world
+        <h1>5.Code Validation </h1>
+        <p>Screenshot of my portfolio code validation is listed below .
         </p>
-        <img src="images/pratik.jpeg" style="height: auto; width: 100%;">
+        <img src="images/1.jpg" style="height: auto; width: 100%;">
+        <img src="images/2.jpg" style="height: auto; width: 100%;">
+        <img src="images/3.jpg" style="height: auto; width: 100%;">
+        <img src="images/4.jpg" style="height: auto; width: 100%;">
     </div>
-    
+    <h1>6.References </h1>
+    <p>	Fore, P., 2021. Photo By Patrick Fore On Unsplash. [online] Unsplash.com. 
+        	W3schools.com. 2021. CSS Shadow Effects. [online] Available at: <https://www.w3schools.com/css/css3_shadows.asp> [
+        	W3schools.com. 2021. CSS Buttons. [online] Available at: <https://www.w3schools.com/css/css3_buttons.asp> 
+        	 Instructables. 2021. Circuits Projects - Instructables. 
+        <https://www.instructables.com/circuits/websites/projects/> 
+    </p>
 
 
     <footer class="footer">
